--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "dev": " NODE_ENV=development webpack-dev-server --hot --open",
-    "start": "NODE_ENV=development webpack-dev-server"
+    "start": "NODE_ENV=development webpack-dev-server --hot"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "node-sass": "^9.0.0",
+    "nodemon": "^2.0.22",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^8.4.2",
     "sass-loader": "^13.3.2",
@@ -25,5 +26,9 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.3.0"
   }
 }
