--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "dev": " NODE_ENV=development webpack-dev-server --hot --open",
-    "start": "NODE_ENV=development webpack-dev-server --hot"
+    "start": "NODE_ENV=production node ./server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
@@ -21,6 +22,7 @@
     "nodemon": "^2.0.22",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^8.4.2",
+    "react-router-dom": "^6.13.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.86.0",
@@ -28,7 +30,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
