--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "solo-project",
+  "name": "Yummy-Juice",
   "version": "1.0.0",
-  "description": "",
+  "description": "Create your own recipes",
   "private": true,
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "dev": " NODE_ENV=development webpack-dev-server --hot --open",
+    "dev": " NODE_ENV=development webpack serve --open & nodemon server/server.js",
     "start": "NODE_ENV=production node ./server/server.js"
+   
   },
   "keywords": [],
   "author": "",
